Footer spacing fix

--- a/my-app/app/_components/_footer/footer.module.css
+++ b/my-app/app/_components/_footer/footer.module.css
@@ -32,5 +32,5 @@
 
 .pad {
     padding-left: 2vh;
-    padding-right: 2vh;
+    padding-right: 1.2vh;
 }
